--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "zod": "^3.24.1"
   }
 }
