--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.8.4",
     "zod": "^3.24.1"
